src/yini_test/cases/golden/lenient/valid/parser-mode/yini-marker-after-comment.yini
# The marker may appear after leading comments.
@yini

^ App
name = "yini-marker-after-comment"
mode = "lenient"
enabled = true
