src/yini_test/cases/golden/lenient/invalid/parser-mode/yini-marker-after-content.yini
^ App
name = "yini-marker-after-content"
mode = "lenient"

@yini
